Fixed front end minifying problems and alignment of tape

--- a/whimsy/static/css/whimsy.css
+++ b/whimsy/static/css/whimsy.css
@@ -518,37 +518,29 @@ div.jqcloud {
 }
  
 /* This class establishes the tape of the top side of the box */
-.paper-style-tape-straight {
+.paper-style-tape {
   position: absolute;
   top: -20px;
+  right: 200px;
   width: 130px;
   height: 40px;
-  background: -moz-linear-gradient(555% 0 180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2) 10%, transparent) repeat scroll 0 0 transparent;
-  background: -ms-linear-gradient(555% 0 180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2) 10%, transparent) repeat scroll 0 0 transparent;
-  background: -webkit-linear-gradient(555% 0 180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2) 10%, transparent) repeat scroll 0 0 transparent;
-  background: -webkit-gradient(555% 0 180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2) 10%, transparent) repeat scroll 0 0 transparent;
-  background: -o-linear-gradient(555% 0 180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2) 10%, transparent) repeat scroll 0 0 transparent;
-  border-right: 1px dashed rgba(0, 0, 0, 0.1);
-  border-left: 1px dashed rgba(0, 0, 0, 0.1);
-  border-color: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
-}
-
-.paper-style-tape {
-  position:absolute;
-  top:0;
-  right: 0;
-  width: 130px;
-  height: 40px;
-  background: -webkit-gradient(linear, 555% 20%, 0 92%, from(rgba(0, 0, 0, 0.1)), to(rgba(0, 0, 0, 0.0)), color-stop(.1,rgba(0, 0, 0, 0.2)));
-  background: -moz-linear-gradient(555% 0 180deg, rgba(0,0,0,0.1), rgba(0,0,0,0.2) 10%, rgba(0,0,0,0.0));
-  background: -o-linear-gradient(555% 0 180deg, rgba(0,0,0,0.1), rgba(0,0,0,0.2) 10%, rgba(0,0,0,0.0));
-  background: -ms-linear-gradient(555% 0 180deg, rgba(0,0,0,0.1), rgba(0,0,0,0.2) 10%, rgba(0,0,0,0.0));
-  background: -webkit-linear-gradient(555% 0 180deg, rgba(0,0,0,0.1), rgba(0,0,0,0.2) 10%, rgba(0,0,0,0.0));
+  background: -webkit-gradient(linear, 555% 20%, 0 92%, from(rgba(0, 0, 0, 0.1)), to(rgba(0, 0, 0, 0)), color-stop(0.1, rgba(0, 0, 0, 0.2)));
+  background: -moz-linear-gradient(555% 0 180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2) 10%, rgba(0, 0, 0, 0));
+  background: -o-linear-gradient(555% 0 180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2) 10%, rgba(0, 0, 0, 0));
+  background: -ms-linear-gradient(555% 0 180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2) 10%, rgba(0, 0, 0, 0));
+  background: -webkit-linear-gradient(555% 0 180deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2) 10%, rgba(0, 0, 0, 0));
   border-right: 1px dashed rgba(0, 0, 0, 0.1);
   border-left: 1px dashed rgba(0, 0, 0, 0.1);
   border-color: rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 0 12px rgba(0,0,0,0.2);
-  box-shadow: 0 0 12px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+}
+
+.paper-style-tape-skewed {
+  top: -12px;
+  -webkit-transform: rotate(-2deg) skew(0, 0) translate(0, -5px);
+  -moz-transform: rotate(-2deg) skew(0, 0) translate(0, -5px);
+  -o-transform: rotate(-2deg) skew(0, 0) translate(0, -5px);
+  transform: rotate(-2deg) skew(0, 0) translate(0, -5px);
 }
